# textstat_id

./: LICENSE  MANIFEST.in  README copy.md  README.md  fitur-textstat-id.md  import.json  pyproject.toml  requirements.txt
tests/: test_analyzer.py  test_counter.py  test_readability.py  test_sentiment.py  test_url_extract.py
textstat_id/: __init__.py  analyzer.py  counter.py  hashtag_extract.py  readability.py  sentiment.py  url_exctract.py  utils.py
textstat_id.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
textstat_id/data/: kata_baku.json  kata_negatif.json  kata_penguat_negatif.json  kata_penguat_positif.json  kata_positif.json
